--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
