--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "art": "^0.10.3",
     "axios": "^0.21.1",
+    "d3": "^6.5.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
@@ -22,7 +24,8 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-simple-radio-button": "^2.7.4",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "shape": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
